--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 </head>
 <body>
 
-    <header>EU SOU FELIPE E ESSES SÃO ALGUNS CLIQUES
+    <header>
+        EU SOU FELIPE E ESSES SÃO ALGUNS CLIQUES
         FOTOS CRUAS, DIRETO DA CÂMERA, QUEM SABE UM DIA EDITO?
     </header>
 
 <main class="grid">
+
+  <div class="card">
+    <div class="image">
+      <img src="image/BORBOLETA.jpeg" alt="">
+    </div>
+    <div class="info">
+      <p class="title">DESTAQUE</p>
+    </div>
+  </div>
 
   <div class="card">
     <div class="image">
