--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 <main class="grid">
 
+    <div class="card">
+    <div class="image">
+      <img src="image/ARANHA.jpg" alt="">
+    </div>
+    <div class="info">
+      <p class="title">ARANHA DE QUINTAL</p>
+    </div>
+  </div>
+
   <div class="card">
     <div class="image">
       <img src="image/BORBOLETA.jpeg" alt="">
