fotos backstage + shckart

--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 
 <main class="grid">
 
+      <div class="card">
+    <div class="image">
+      <img src="image/backstage-predio.jpg" alt="">
+    </div>
+    <div class="info">
+      <p class="title">BACKSTAGE BOULE - AMIZADE</p>
+    </div>
+  </div>
+
+      <div class="card">
+    <div class="image">
+      <img src="image/backstage-campo.jpg" alt="">
+    </div>
+    <div class="info">
+      <p class="title">BACKSTAGE BOULE - AMIZADE</p>
+    </div>
+  </div>
+
+    <div class="card">
+    <div class="image">
+      <img src="image/shckart.jpg" alt="">
+    </div>
+    <div class="info">
+      <p class="title">SHCK ART NO SOFÁ</p>
+    </div>
+  </div>
+
     <div class="card">
     <div class="image">
       <img src="image/ARANHA.jpg" alt="">
